--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -59,6 +59,7 @@ services:
         volumes:
             - /mnt/data/tailscale:/var/lib/tailscale
         network_mode: host
+        runtime: runc
         privileged: true
         environment:
             - AUTH_KEY=${TAILSCALE_AUTH_KEY}
@@ -69,6 +70,7 @@ services:
         image: jonoh/cloudflared:2022.6.3
         restart: always
         network_mode: host
+        runtime: runc
         volumes:
             - /mnt/data/cloudflare_ssh:/config
         environment:
