--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -607,8 +607,8 @@ services:
         environment:
             - RCLONE_CONFIG=/config/rclone.conf
             - RCLONE_MOUNT_CACHE_DIR=/cache
-            - RCLONE_MOUNT_DIR=onedrive:/
-            - RCLONE_MOUNT_TARGET=/app/config
+            - RCLONE_MOUNT_DIR=onedrive:/storage/blobs
+            - RCLONE_MOUNT_TARGET=/app/config/storage/blobs
             - WALLET=${STORJ_WALLET}
             - EMAIL=${EMAIL}
             - ADDRESS=${PUBLIC_IP}:28967
@@ -617,6 +617,7 @@ services:
         volumes:
             - /mnt/data/storj:/config
             - /mnt/data/storj/identity:/app/identity
+            - /mnt/data/storj/data:/app/config
             - /tmp/storj_cache:/cache
         ports:
             - 28967:28967/tcp
