--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -599,49 +599,49 @@ services:
                 "$$IMAGE"
         ]
 
-    storj:
-        image: ghcr.io/jonohill/nas-storj:15
-        restart: always
-        labels:
-            - autoheal=true        
-        environment:
-            - RCLONE_CONFIG=/config/rclone.conf
-            - RCLONE_MOUNT_CACHE_DIR=/cache
-            - RCLONE_MOUNT_DIR=onedrive:/storage/blobs
-            - RCLONE_MOUNT_TARGET=/app/config/storage/blobs
-            - WALLET=${STORJ_WALLET}
-            - EMAIL=${EMAIL}
-            - ADDRESS=${PUBLIC_IP}:28967
-            - STORAGE=650000000 # 650 GB
-            - WALLET_FEATURES=zksync
-        volumes:
-            - /mnt/data/storj:/config
-            - /mnt/data/storj/identity:/app/identity
-            - /mnt/data/storj/data:/app/config
-            - /tmp/storj_cache:/cache
-        ports:
-            - 28967:28967/tcp
-            - 28967:28967/udp
-        cap_add:
-            - SYS_ADMIN
-        devices:
-            - /dev/fuse
-        security_opt:
-            - apparmor:unconfined
-        networks:
-            - storj
+    # storj:
+    #     image: ghcr.io/jonohill/nas-storj:15
+    #     restart: always
+    #     labels:
+    #         - autoheal=true        
+    #     environment:
+    #         - RCLONE_CONFIG=/config/rclone.conf
+    #         - RCLONE_MOUNT_CACHE_DIR=/cache
+    #         - RCLONE_MOUNT_DIR=onedrive:/storage/blobs
+    #         - RCLONE_MOUNT_TARGET=/app/config/storage/blobs
+    #         - WALLET=${STORJ_WALLET}
+    #         - EMAIL=${EMAIL}
+    #         - ADDRESS=${PUBLIC_IP}:28967
+    #         - STORAGE=650000000 # 650 GB
+    #         - WALLET_FEATURES=zksync
+    #     volumes:
+    #         - /mnt/data/storj:/config
+    #         - /mnt/data/storj/identity:/app/identity
+    #         - /mnt/data/storj/data:/app/config
+    #         - /tmp/storj_cache:/cache
+    #     ports:
+    #         - 28967:28967/tcp
+    #         - 28967:28967/udp
+    #     cap_add:
+    #         - SYS_ADMIN
+    #     devices:
+    #         - /dev/fuse
+    #     security_opt:
+    #         - apparmor:unconfined
+    #     networks:
+    #         - storj
 
-    cloudflare_storj:
-        image: jonoh/cloudflared:2022.6.3
-        restart: always
-        volumes:
-            - /mnt/data/cloudflare_storj:/config
-        environment:
-            - TZ=Pacific/Auckland
-            - TUNNEL_URL=http://storj:14002
-            - ACCOUNT_ID=${CF_ACCOUNT_ID}
-            - TUNNEL_NAME=storj
-            - TUNNEL_ID=${STORJ_TUNNEL_ID}
-            - TUNNEL_SECRET=${STORJ_TUNNEL_SECRET}
-        networks:
-            - storj
+    # cloudflare_storj:
+    #     image: jonoh/cloudflared:2022.6.3
+    #     restart: always
+    #     volumes:
+    #         - /mnt/data/cloudflare_storj:/config
+    #     environment:
+    #         - TZ=Pacific/Auckland
+    #         - TUNNEL_URL=http://storj:14002
+    #         - ACCOUNT_ID=${CF_ACCOUNT_ID}
+    #         - TUNNEL_NAME=storj
+    #         - TUNNEL_ID=${STORJ_TUNNEL_ID}
+    #         - TUNNEL_SECRET=${STORJ_TUNNEL_SECRET}
+    #     networks:
+    #         - storj
