--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -600,14 +600,16 @@ services:
         ]
 
     storj:
-        image: ghcr.io/jonohill/nas-storj:22
+        image: ghcr.io/jonohill/nas-storj:23
         restart: always
         labels:
             - autoheal=true        
         environment:
             - RCLONE_CONFIG=/config/rclone.conf
             - RCLONE_MOUNT_CACHE_DIR=/cache
-            - RCLONE_BASE_DIR=onedrive:/storage
+            - MOUNT_SOURCE=union:/
+            - STORAGE_SOURCE=onedrive:/
+            - LOCAL_SOURCE=file:/mnt/data/storj/data/
             - STORAGE_DIR=/app/config/storage
             - WALLET=${STORJ_WALLET}
             - EMAIL=${EMAIL}
@@ -617,7 +619,7 @@ services:
         volumes:
             - /mnt/data/storj:/config
             - /mnt/data/storj/identity:/app/identity
-            - /mnt/data/storj/data:/app/config
+            - /mnt/data/storj/data:/mnt/data/storj/data
             - /tmp/storj_cache:/cache
         ports:
             - 28967:28967/tcp
