--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -600,8 +600,8 @@ services:
         ]
 
     storj:
-        image: ghcr.io/jonohill/nas-storj:25
-        restart: always
+        image: ghcr.io/jonohill/nas-storj:27
+        # restart: always
         labels:
             - autoheal=true        
         environment:
@@ -616,6 +616,7 @@ services:
             - ADDRESS=${PUBLIC_IP}:28967
             - STORAGE=650000000000 # 650 GB
             - WALLET_FEATURES=zksync
+            - SETUP=true
         volumes:
             - /mnt/data/storj:/config
             - /mnt/data/storj/identity:/app/identity
