--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -601,7 +601,7 @@ services:
 
     storj:
         image: ghcr.io/jonohill/nas-storj:28
-        # restart: always
+        restart: always
         labels:
             - autoheal=true        
         environment:
@@ -616,7 +616,7 @@ services:
             - ADDRESS=${PUBLIC_IP}:28967
             - STORAGE=650000000000 # 650 GB
             - WALLET_FEATURES=zksync
-            - SETUP=true
+            # - SETUP=true
         volumes:
             - /mnt/data/storj:/config
             - /mnt/data/storj/identity:/app/identity
