--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -252,7 +252,7 @@ services:
 
     qbittorrent:
         image: hotio/qbittorrent:release-4.4.5
-        name: qbittorrent
+        container_name: qbittorrent
         labels:
             - autoheal=true        
         volumes:
