--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,7 @@ networks:
     filerun: {}
     gh_runner: {}
     storj: {}
+    nextpvr: {}
 
 # Images which require special regex handling for renovate
 x-images:
@@ -293,9 +294,9 @@ services:
     # TV
     # ~~
 
-    vpn_tvheadend:
+    vpn_nextpvr:
         image: qmcgaw/gluetun:v3.30.0
-        container_name: vpn_tvheadend
+        container_name: vpn_nextpvr
         restart: always
         cap_add:
             - NET_ADMIN
@@ -307,40 +308,41 @@ services:
             - OPENVPN_PASSWORD=${VPN_PASSWORD}
             - SERVER_HOSTNAME=nz-akl.prod.surfshark.com
             - HTTPPROXY=on
+        networks:
+            - nextpvr
 
-    tvheadend:
-        image: lscr.io/linuxserver/tvheadend
-        container_name: tvheadend
-        restart: always    
-        labels:
-            - autoheal=true         
-        network_mode: "service:vpn_tvheadend"
-        environment:
-            - PUID=1000
-            - PGID=1000
-            - TZ=Pacific/Auckland
+    nextpvr:
+        image: ghcr.io/jonohill/nas-nextpvr:11
+        container_name: nextpvr
+        network_mode: "service:vpn_nextpvr"
+        restart: always
+        devices:
+            - /dev/fuse
+        cap_add:
+            - SYS_ADMIN
         volumes:
-            - /mnt/data/tvheadend:/config
-        healthcheck:
-            test: curl -f https://tvheadend.hillnz.com || exit 1
-            interval: 30s
-            timeout: 10s
-            retries: 1
-            start_period: 30s
+            - /mnt/data/tmp/nextpvr-cache:/cache
+            - /mnt/data/nextpvr:/config
+        environment:
+            - RCLONE_MOUNT_CACHE_DIR=/cache
+            - MOUNT_SOURCE=recordings:/
+        networks:
+            - nextpvr
 
-    cloudflare_tvheadend:
-        image: jonoh/cloudflared:2022.10.0
+    cloudflare_nextpvr:
+        image: jonoh/cloudflared:2022.9.1
         restart: always
         volumes:
-            - /mnt/data/cloudflare_tvheadend:/config
+            - /mnt/data/cloudflare_qbt:/config
         environment:
             - TZ=Pacific/Auckland
-            - TUNNEL_URL=http://vpn_tvheadend:9981
+            - TUNNEL_URL=http://vpn_nextpvr:8866
             - ACCOUNT_ID=${CF_ACCOUNT_ID}
-            - TUNNEL_NAME=tvheadend
-            - TUNNEL_ID=${TV_TUNNEL_ID}
-            - TUNNEL_SECRET=${TV_TUNNEL_SECRET}
-
+            - TUNNEL_NAME=nextpvr
+            - TUNNEL_ID=${NEXTPVR_TUNNEL_ID}
+            - TUNNEL_SECRET=${NEXTPVR_TUNNEL_SECRET}      
+        networks:
+            - nextpvr                   
 
     # ~~~~~
     # Other
