Try apparmor fiddling

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -320,6 +320,8 @@ services:
             - /dev/fuse
         cap_add:
             - SYS_ADMIN
+        security_opt:
+            - apparmor:unconfined            
         volumes:
             - /mnt/data/tmp/nextpvr-cache:/cache
             - /mnt/data/nextpvr:/config
