--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -342,7 +342,35 @@ services:
             - TUNNEL_ID=${NEXTPVR_TUNNEL_ID}
             - TUNNEL_SECRET=${NEXTPVR_TUNNEL_SECRET}      
         networks:
-            - nextpvr                   
+            - nextpvr
+
+    jellyfin:
+        image: lscr.io/linuxserver/jellyfin:10.8.7
+        restart: always
+        environment:
+            - TZ=Pacific/Auckland
+            - PUID=1000
+            - PGID=1000
+            - JELLYFIN_PublishedServerUrl=https://tv.hillnz.com/
+        volumes:
+            - /mnt/data/jellyfin:/config
+        networks:
+            - nextpvr
+
+    cloudflare_jellyfin:
+        image: jonoh/cloudflared:2022.9.1
+        restart: always
+        volumes:
+            - /mnt/data/cloudflare_jellyfin:/config
+        environment:
+            - TZ=Pacific/Auckland
+            - TUNNEL_URL=http://jellyfin:8096
+            - ACCOUNT_ID=${CF_ACCOUNT_ID}
+            - TUNNEL_NAME=tv
+            - TUNNEL_ID=${TV_TUNNEL_ID}
+            - TUNNEL_SECRET=${TV_TUNNEL_SECRET}      
+        networks:
+            - nextpvr
 
     # ~~~~~
     # Other
