--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -132,21 +132,16 @@ services:
             - /var/run/docker.sock:/var/run/docker.sock
 
     filerun:
-        image: ghcr.io/jonohill/nas-filerun:3
+        image: ghcr.io/jonohill/nas-filerun:4
         restart: always
         environment:
             FR_DB_HOST: filerun_db
-            FR_DB_PORT: 3306
-            FR_DB_NAME: filerun
             FR_DB_USER: root
             FR_DB_PASS: password
-            APACHE_RUN_USER: www-data
-            APACHE_RUN_USER_ID: 33
-            APACHE_RUN_GROUP: www-data
-            APACHE_RUN_GROUP_ID: 33
             TZ: Pacific/Auckland
+            AUTOLOGIN_USERNAME: superuser
         volumes:
-            - /mnt/data/filerun:/var/www/html/system/data
+            - /mnt/data/filerun/data:/var/www/html/system/data
             - /mnt/data:/user-files
         networks:
             - filerun
