--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,7 +26,7 @@ services:
     # ~~~~~~~~~~~~ 
 
     healthchecks:
-        image: jonoh/nas-healthchecks:4
+        image: ghcr.io/jonohill/nas-healthchecks:4
         restart: always
         environment:
             - PING_URL=${HEALTHCHECKS_PING_URL}
