--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -98,7 +98,7 @@ services:
             - backup
 
     duplicacy:
-        image: jonoh/duplicacy:2.7.2
+        image: ghcr.io/jonohill/nas-duplicacy:4
         environment:
             - BACKUP_CRON=1 * * * *
             - RUN_JOB_IMMEDIATELY=yes
@@ -109,6 +109,7 @@ services:
             - JOB_RANDOM_DELAY=300
             - PRUNE_KEEP_POLICIES=0:360;30:180;7:30;1:7
             - PRE_BACKUP_SCRIPT=/usr/local/bin/pre_backup.sh
+            - HEALTHCHECK_URL=${DUPLICACY_HEALTHCHECK_URL}
         volumes:
             - /mnt/data:/data
             - /mnt/data/duplicacy_naspool/config:/config
