--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -352,7 +352,7 @@ services:
             - nextpvr            
 
     rclone_move_tv:
-        image: ghcr.io/jonohill/rclone-move:18
+        image: ghcr.io/jonohill/rclone-move:19
         restart: always
         volumes:
             - /mnt/data/tmp/nextpvr/sorted:/source
@@ -363,6 +363,7 @@ services:
             # 900 GB
             - RCLONE_SIZE_LIMIT=966367641600
             - RCLONE_EXTRA_FLAGS=--onedrive-no-versions
+            - MAX_PATH_LENGTH=200
         networks:
             - nextpvr
 
