--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -352,7 +352,7 @@ services:
             - nextpvr            
 
     rclone_move_tv:
-        image: ghcr.io/jonohill/rclone-move:19
+        image: ghcr.io/jonohill/rclone-move:21
         restart: always
         volumes:
             - /mnt/data/tmp/nextpvr/sorted:/source
@@ -364,8 +364,9 @@ services:
             - RCLONE_SIZE_LIMIT=966367641600
             - RCLONE_EXTRA_FLAGS=--onedrive-no-versions
             - MAX_PATH_LENGTH=180
-        networks:
-            - nextpvr
+            - PLEX_PREFIX=/data/recordings
+            - PLEX_URL=http://plex:32400
+            - PLEX_TOKEN=${PLEX_TOKEN}
 
     # ~~~~~
     # Other
