--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -100,17 +100,18 @@ services:
     duplicacy:
         image: ghcr.io/jonohill/nas-duplicacy:5
         environment:
-            - BACKUP_CRON=1 * * * *
             - RUN_JOB_IMMEDIATELY=yes
-            - PRUNE_CRON=34 1 * * sun
             - SNAPSHOT_ID=larry
-            - DUPLICACY_PASSWORD=${DUPLICACY_PASSWORD}
             - STORAGE_URL=sftp://rclone_serve_backup:2022//duplicacy
-            - JOB_RANDOM_DELAY=300
-            - PRUNE_KEEP_POLICIES=0:360;30:180;7:30;1:7
-            - PRE_BACKUP_SCRIPT=/usr/local/bin/pre_backup.sh
-            - HEALTHCHECK_URL=${DUPLICACY_HEALTHCHECK_URL}
+            - DUPLICACY_PASSWORD=${DUPLICACY_PASSWORD}
+            - BACKUP_CRON=1 * * * *
             - FILTER_PATTERNS=-downloads/;-tmp/
+            - PRE_BACKUP_SCRIPT=/usr/local/bin/pre_backup.sh
+            - PRUNE_CRON=34 1 * * sun
+            - PRUNE_KEEP_POLICIES=0:360;30:180;7:30;1:7
+            - PRUNE_OPTIONS=-exhaustive
+            - JOB_RANDOM_DELAY=300
+            - HEALTHCHECK_URL=${DUPLICACY_HEALTHCHECK_URL}
         volumes:
             - /mnt/data:/data
             - /mnt/data/duplicacy_naspool/config:/config
